# model3d-gl

./: Cargo.toml
src/: buffer.rs  lib.rs  material.rs  opengl.rs  program.rs  shader_instantiable.rs  texture.rs  traits.rs  types.rs  vertices.rs  webgl.rs  webgl_log.rs
src/opengl/: buffer.rs  program.rs  shader.rs  texture.rs  utils.rs  vao.rs
src/webgl/: buffer.rs  program.rs  shader.rs  texture.rs  vao.rs
