[package]
name = "model3d-gl"
version = "0.1.0"
edition = "2021"

[features]
default = ["webgl", "opengl", "serde"]
webgl = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
opengl = ["dep:gl"]
serde = ["dep:serde"]

[dependencies]
geo-nd   = "0.1.0"
indent-display = "0.1.1"
model3d-base = { path="../model3d-base" }

[dependencies.serde]
optional = true
version = ">=1.0.203"
features = ["derive"]

[dependencies.gl]
optional = true
version = ">=0.14.0"

[dependencies.wasm-bindgen]
optional = true
version = ">=0.2.92"

[dependencies.js-sys]
optional = true
version = ">=0.3.64"

[dependencies.web-sys]
optional = true
version = ">=0.3.69"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'EventTarget',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
]

